update pom, gitignore and application properties files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,15 @@ server.port=5000
 
 #PostgreSQL setup
 spring.datasource.url=jdbc:postgresql://localhost:5432/springbootpractice
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=${env.DB_USERNAME}
+spring.datasource.password=${env.DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format-sql=true
+
+# Error Handling
+server.error.include-message=always
+server.error.include-binding-errors=always
+
 
