update pom.xml file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=5000
 
 #PostgreSQL setup
-spring.datasource.url=jdbc:postgresql://localhost:5432/springbootpractice
+spring.datasource.url=jdbc:postgresql://localhost:5432/springbootpractice?createDatabaseIfNotExist=true
 spring.datasource.username=${env.DB_USERNAME}
 spring.datasource.password=${env.DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -17,8 +17,8 @@ server.error.include-binding-errors=always
 #Mail Configuration
 spring.mail.host=localhost
 spring.mail.port=1025
-spring.mail.username=hello
-spring.mail.password=hello
+spring.mail.username=${env.EMAIL_USERNAME}
+spring.mail.password=${env.EMAIL_USERNAME}
 spring.mail.properties.mail.smtp.ssl.trust= "*"
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
