--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,6 @@ spring.mail.properties.mail.smtp.connectiontimeout= 5000
 spring.mail.properties.mail.smtp.timeout= 3000
 spring.mail.properties.mail.smtp.writetimeout= 5000
 
-
-
-
+# JWT SECRET
+jwt.secret=${env.JWT_SECRET}
 
