--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,11 @@ spring.datasource.username=${env.DB_USERNAME}
 spring.datasource.password=${env.DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.format-sql=true
+server.error.include-stacktrace=never
+spring.main.allow-circular-references=true
+spring.main.allow-bean-definition-overriding=true
 
 # Error Handling
 server.error.include-message=always
@@ -27,5 +30,4 @@ spring.mail.properties.mail.smtp.timeout= 3000
 spring.mail.properties.mail.smtp.writetimeout= 5000
 
 # JWT SECRET
-jwt.secret=${env.JWT_SECRET}
-
+jwt_secret=${env.JWT_SECRET}
