--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,10 @@
       "name": "spring.jpa.hibernate.dialect",
       "type": "java.lang.String",
       "description": "Description for spring.jpa.hibernate.dialect."
-  }
-] }
+    },
+    {
+      "name": "jwt.secret",
+      "type": "java.lang.String",
+      "description": "Description for jwt.secret."
+    }
+  ] }
